--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,700;1,400&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Vidaloka&display=swap');
 
 * {
   margin: 0;
@@ -11,6 +12,7 @@
   --font-1: Arial, Helvetica, sans-serif;
   --font-2: Roboto, sans-serif;
   --font-3: 'Playfair Display', sans-serif;
+  --font-4: Vidaloka, sans-serif;
   --color-black-1: #121212;
   --color-black-2: #272626;
   --color-gray-light: #69727d;
@@ -20,102 +22,386 @@
   --color-primary-2: #2f5aae;
   --color-blue-light: #0499DB;
   --color-blue: #06025f;
+  --color-dark-blue: #02095b;
   --color-white: #ffffff;
+  --color-orange: #ff6900;
 }
 
 body {
   background-color: var(--color-white);
 }
 
-/* Menu Header */
-
-.header-index {
-  display: none;
+.container {
+  position: relative;
 }
 
-.wrapper {
-  width: 95%;
-  margin: 0 auto;
-  display: flex;
-}
+/* ---------- NAVBAR ---------- */
 
-.w-text {
+nav {
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  /*margin: 4px 0;*/
-  /*padding: 0 15px;*/
-}
-
-.w-content {
-  float: right;
-  height: 25px;
-  width: 40px;
-  margin-top: 20px;
-  display: flex;
-  flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  padding: 0 10%;
+  height: 75px;
+  line-height: 75px;
+  background-color: var(--color-black-2);
+  position: fixed;
+}
+
+.nav-logo {
+  cursor: pointer;
+  width: 50px;
+  height: 50px;
+}
+
+.nav-btn {
+  color: var(--color-white);
+  font-size: 18px;
+  font-weight: 500;
+  text-decoration: none;
+  font-family: var(--font-1);
+  cursor: pointer;
+  height: 100%;
+  padding: 25px 15px;
+  list-style: none;
+  transition: .4s;
+} 
+
+nav .nav-btns .nav-btn:hover {
+  background-color: var(--color-gray-1);
   cursor: pointer;
 }
 
-.menulogo {
-  height: 3px;
-  width: 30px;
+nav .nav-list {
+  display: flex;
+  position: absolute;
+  z-index: 1;
+}
+
+nav .nav-list .nav-item {
+  cursor: pointer;
+  height: 100%;
+  padding: 0 15px;
+  list-style: none;
+  transition: .4s;
+}
+
+nav .nav-list .nav-item:hover {
   background-color: var(--color-black-2);
 }
 
-.menu {
-  width: 84%;
-  height: 100vh;
-  padding: 15px;
-  background-color: var(--color-primary-1);
-  transform: translateX(-500px);
-  transition: 0.5s;
-}
-
-.menu li {
-  list-style: none;
-  padding: 30px 0;
-  text-align: center;
-}
-
-.showmenu {
-  transform: translateX(0);
-}
-
-.menu li a {
-  text-decoration: none;
+nav .nav-list .nav-link {
   color: var(--color-white);
+  font-size: 18px;
+  font-weight: 500;
+  text-decoration: none;
   font-family: var(--font-1);
-  font-size: 16px;
-  transition: font-weight 0.2s;
 }
 
-.menu li:hover {
-  border: 1px solid var(--color-white);
-  font-weight: bold;
+@media (max-width: 1800px) {
+  .nav-list .nav-item .nav-link {
+    display: none;
+  }
+}
+
+@media (max-width: 675px) {
+  .nav-btn {
+    display: none;
+  }
+
+  nav {
+    padding: 0 1rem;
+  }
+
+  nav .nav-list .nav-item {
+    padding: 0 20px;
+  }
+}
+
+@media (max-width: 675px) {
+  .nav-list .nav-item .nav-link {
+    display: flex;
+    justify-content: center;
+  }
+
+  nav .nav-list {
+    display: grid;
+    background-color: var(--color-gray-1);
+    width: 100%;
+    top: 75px;
+    left: 0;
+    transition: .6s;
+  }
+
+  nav .nav-list .nav-item {
+    text-align: center;
+  }
+
+  nav .navbar-toggler {
+    display: grid !important;
+  }
+} 
+
+nav .navbar-toggler {
+  display: none;
+  height: min-content;
+  margin: 10px -2px 0 0;
   cursor: pointer;
 }
 
-.menu li a:hover {
-  font-weight: bold;
+nav .navbar-toggler .bar {
+  width: 40px;
+  height: 5px;
+  margin-bottom: 10px;
+  background-color: var(--color-white);
+  border-radius: 10%;
+  transition: .4s;
 }
 
-@media screen and (min-width: 1000px) {
-  .menu {
-    width: 1280px;
+input {
+  display: none;
+}
+
+input:checked ~ nav .nav-list {
+  transform: translateX(-900px);
+}
+
+/* ---------- SECTION 1 ---------- */
+
+.img-section-1 {
+  width: 100%;
+  max-width: 3000px;
+  background-size: cover;
+  margin-top: 75px;
+}
+
+/* ---------- SECTION 2 ---------- */
+
+.section-2 {
+  width: 100%;
+  max-width: 3000px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  padding: 60px 80px;
+}
+
+.section-2-left {
+  width: 100%;
+  max-width: 50%;
+}
+
+.section-2-left-title {
+  font-family: var(--font-2);
+  font-size: 40px;
+  font-weight: 700;
+  color: var(--color-primary-1);
+}
+
+.section-2-left-content {
+  text-align: justify;
+  color: var(--color-gray-2);
+  font-size: 24px;
+  font-weight: 300;
+  font-family: var(--font-2);
+  line-height: 1.7em;
+  margin: 30px 0 70px 0;
+}
+
+.section-2-btn {
+  width: 100%;
+  max-width: 188px;
+  color: var(--color-blue);
+  font-family: var(--font-2);
+  font-size: 15px;
+  font-weight: 400;
+  letter-spacing: 4px;
+  border-style: solid;
+  border-width: 3px 3px 3px 3px;
+  text-decoration: none;
+  border-color: var(--color-dark-blue);
+  padding: 15px 40px;
+  text-align: center;
+  margin-top: 40px 0;
+  transition: .4s;
+}
+
+.section-2-btn:hover {
+  background-color: var(--color-orange);
+  color: var(--color-white);
+  border-color: var(--color-orange);
+}
+
+.section-2-right-img {
+  width: 100%;
+  max-width: 400px;
+  height: auto;
+}
+
+@media (max-width: 1000px) {
+  .section-2 {
+    justify-content: center;
+  }
+
+  .section-2-btn {
+    width: 100%;
+    max-width: 187px;
+  }
+
+  .section-2-right-img {
+    max-width: 300px;
+    margin: 40px;
   }
 }
 
-@media (max-width: 600px) {
-  .header-index {
-    display: block;
+@media (max-width: 650px) {
+  .section-2 {
+    padding: 40px 60px;
+  }
+
+  .section-2-left {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .section-2-left-title {
+    font-size: 30px;
+    text-align: center;
+  }
+
+  .section-2-left-content {
+    font-size: 18px;
+    text-align: center;
+    margin: 20px 0 30px 0;
+  }
+
+  .section-2-btn {
+    padding: 4px 6px;
+    margin-top: 0;
+    font-size: 10px;
+    border: solid 1px var(--color-dark-blue);
+    letter-spacing: 0;
+  }
+
+  .section-2-right {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
 
-@media screen and (min-width: 500px) {
-  .menu li a {
-    font-size: 16px;
+/* ---------- SECTION 3 ---------- */
+
+.section-3 {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 200px 100px;
+  margin: auto;
+}
+
+.section-3-element {
+  width: 100%;
+  max-width: 25%;
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 100px 0 0;
+  border-bottom: 1px solid var(--color-black-2);
+}
+
+.fa-solid {
+  color: var(--color-blue-light);
+  margin: 0 10px;
+  top: 0px;
+}
+
+.section-3-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.section-3-title {
+  font-size: 60px;
+  font-family: var(--font-4);
+  font-weight: 900;
+  color: var(--color-primary-1);
+}
+
+.section-3-content {
+  color: var(--color-gray-1);
+  font-family: var(--font-2);
+  font-size: 12px;
+  font-weight: 400;
+  text-transform: uppercase;
+  line-height: 1.6em;
+  letter-spacing: 5px;
+}
+
+@media (max-width: 1370px) {
+  .section-3 {
+    flex-wrap: wrap;
   }
 }
+
+@media (max-width: 1000px) {
+  .section-3 {
+    flex-direction: column;
+    justify-content: center;
+    padding: 40px 20px;
+  }
+
+  .section-3-element {
+    width: 100%;
+    max-width: 100%;
+    margin: 0 0 0 0;
+    height: 120px;
+    justify-content: left;
+  }
+
+  .section-3-title {
+    font-size: 40px;
+  }
+
+  .section-3-content {
+    font-size: 10px;
+  }
+}
+
+@media (max-width: 770px) {
+  .section-3-element {
+    flex-direction: column;
+    margin: 30px 0;
+    height: 175px;
+  }
+
+  .section-3-text {
+    text-align: center;
+  }
+
+  .section-3-title {
+    margin: 10px 0;
+    font-size: 50px;
+  }
+
+  .section-3-content {
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 270px) {
+  .section-3-element {
+    height: 190px;
+  }
+}
+
+/*---------------------------------------------------------------------------------------------*/
+/*---------------------------------------------------------------------------------------------*/
 
