--- a/index.css
+++ b/index.css
@@ -1,17 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,700;1,400&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Vidaloka&display=swap');
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,700;1,400&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Vidaloka&display=swap");
 
 :root {
   --font-1: Arial, Helvetica, sans-serif;
   --font-2: Roboto, sans-serif;
-  --font-3: 'Playfair Display', sans-serif;
+  --font-3: "Playfair Display", sans-serif;
   --font-4: Vidaloka, sans-serif;
   --color-black-1: #121212;
   --color-black-2: #272626;
@@ -20,7 +14,7 @@
   --color-gray-2: #43403ed9;
   --color-primary-1: #2c446c;
   --color-primary-2: #2f5aae;
-  --color-blue-light: #0499DB;
+  --color-blue-light: #0499db;
   --color-blue: #06025f;
   --color-dark-blue: #02095b;
   --color-white: #ffffff;
@@ -28,25 +22,16 @@
 }
 
 body {
+  width: 100% !important;
   background-color: var(--color-white);
-}
-
-.container {
-  position: relative;
 }
 
 /* ---------- NAVBAR ---------- */
 
 nav {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  position: fixed !important;
+  width: 100% !important;
   padding: 0 10%;
-  height: 75px;
-  line-height: 75px;
-  background-color: var(--color-black-2);
-  position: fixed;
 }
 
 .nav-logo {
@@ -55,116 +40,40 @@ nav {
   height: 50px;
 }
 
-.nav-btn {
-  color: var(--color-white);
-  font-size: 18px;
-  font-weight: 500;
-  text-decoration: none;
-  font-family: var(--font-1);
-  cursor: pointer;
-  height: 100%;
-  padding: 25px 15px;
-  list-style: none;
-  transition: .4s;
-} 
-
-nav .nav-btns .nav-btn:hover {
-  background-color: var(--color-gray-1);
+li .nav-item {
   cursor: pointer;
 }
 
-nav .nav-list {
+.nav-item {
   display: flex;
-  position: absolute;
-  z-index: 1;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 6px;
+  margin: 0 10px !important;
+  padding: 0 8px !important;
 }
 
-nav .nav-list .nav-item {
-  cursor: pointer;
-  height: 100%;
-  padding: 0 15px;
-  list-style: none;
-  transition: .4s;
+.nav-link {
+  transition: 0.4 ease;
 }
 
-nav .nav-list .nav-item:hover {
-  background-color: var(--color-black-2);
+.nav-link:hover {
+  color: var(--color-blue-light) !important;
+  cursor: pointer !important;
 }
 
-nav .nav-list .nav-link {
-  color: var(--color-white);
-  font-size: 18px;
-  font-weight: 500;
-  text-decoration: none;
-  font-family: var(--font-1);
-}
-
-@media (max-width: 1800px) {
-  .nav-list .nav-item .nav-link {
-    display: none;
-  }
-}
-
-@media (max-width: 675px) {
-  .nav-btn {
-    display: none;
-  }
-
-  nav {
-    padding: 0 1rem;
-  }
-
-  nav .nav-list .nav-item {
-    padding: 0 20px;
-  }
-}
-
-@media (max-width: 675px) {
-  .nav-list .nav-item .nav-link {
+@media (max-width: 991px) {
+  .nav-item-content {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
   }
 
-  nav .nav-list {
-    display: grid;
-    background-color: var(--color-gray-1);
-    width: 100%;
-    top: 75px;
-    left: 0;
-    transition: .6s;
-  }
-
-  nav .nav-list .nav-item {
+  .nav-item {
+    border: none;
+    margin: 10px 10px;
     text-align: center;
   }
-
-  nav .navbar-toggler {
-    display: grid !important;
-  }
-} 
-
-nav .navbar-toggler {
-  display: none;
-  height: min-content;
-  margin: 10px -2px 0 0;
-  cursor: pointer;
-}
-
-nav .navbar-toggler .bar {
-  width: 40px;
-  height: 5px;
-  margin-bottom: 10px;
-  background-color: var(--color-white);
-  border-radius: 10%;
-  transition: .4s;
-}
-
-input {
-  display: none;
-}
-
-input:checked ~ nav .nav-list {
-  transform: translateX(-900px);
 }
 
 /* ---------- SECTION 1 ---------- */
@@ -225,7 +134,7 @@ input:checked ~ nav .nav-list {
   padding: 15px 40px;
   text-align: center;
   margin-top: 40px 0;
-  transition: .4s;
+  transition: 0.4s;
 }
 
 .section-2-btn:hover {
@@ -309,6 +218,7 @@ input:checked ~ nav .nav-list {
   justify-content: center;
   align-items: center;
   border-bottom: 1px solid var(--color-black-2);
+  z-index: -1;
 }
 
 .fa-solid {
@@ -391,6 +301,13 @@ input:checked ~ nav .nav-list {
   }
 }
 
+@media (max-width: 450px) {
+  .section-3-content {
+    font-size: 10px;
+    letter-spacing: 3px;
+  }
+}
+
 @media (max-width: 270px) {
   .section-3-element {
     height: 190px;
@@ -415,6 +332,206 @@ input:checked ~ nav .nav-list {
   animation: appear 1.3s ease;
 }
 
-/*---------------------------------------------------------------------------------------------*/
-/*---------------------------------------------------------------------------------------------*/
+/* ---------- SECTION 4 ---------- */
 
+.section-4 {
+  width: 100%;
+  max-width: 1140px;
+  margin: auto;
+}
+
+.section-4-parallax {
+  width: 100%;
+  max-width: 1140px;
+  background: rgba(0, 0, 0, 0.3) url(img/Nosotros.png);
+  background-size: cover;
+  background-attachment: fixed;
+  height: 794.88px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  background-blend-mode: darken;
+  opacity: 0.9;
+  z-index: -1;
+}
+
+.section-4-box {
+  width: 100%;
+  max-width: 640px;
+  height: 544.98px;
+  background-color: var(--color-white);
+  padding: 80px 100px;
+  position: absolute;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-content: flex-start;
+}
+
+.section-4-box-title {
+  font-size: 40px;
+  font-weight: 700;
+  color: var(--color-primary-1);
+  font-family: var(--font-2);
+  text-align: center;
+}
+
+.section-4-box-description {
+  font-family: var(--font-2);
+  text-align: center;
+  color: var(--color-gray-2);
+  font-size: 24px;
+  font-weight: 300;
+  line-height: 1.7em;
+  margin: 30px 0;
+}
+
+.section-4-box-btn-content {
+  text-align: center;
+}
+
+.section-4-box-btn {
+  font-family: var(--font-2);
+  font-size: 15px;
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+  fill: var(--color-blue);
+  color: var(--color-blue);
+  background-color: rgba(0, 0, 0, 0);
+  border-style: solid;
+  border-width: 3px 3px 3px 3px;
+  border-color: var(--color-dark-blue);
+  border-radius: 0px 0px 0px 0px;
+  padding: 15px 40px 15px 40px;
+  cursor: pointer;
+  transition: 0.4s ease;
+}
+
+.section-4-box-btn:hover {
+  background-color: var(--color-orange);
+  border-color: var(--color-orange);
+  color: var(--color-white);
+}
+
+@media (max-width: 650px) {
+  .section-4-parallax {
+    background-image: url(img/Nosotros.png);
+    background-size: cover;
+    background-position: center;
+    background-attachment: inherit;
+    background-repeat: no-repeat;
+    height: 400px;
+  }
+
+  .section-4-box {
+    max-width: 315px;
+    height: 363px;
+  }
+
+  .section-4-box-title {
+    font-size: 25px;
+  }
+
+  .section-4-box-description {
+    width: 100%;
+    max-width: 255px;
+    font-size: 14px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+  }
+
+  .section-4-box-btn {
+    padding: 0 8px;
+  }
+}
+
+/* ---------- SECTION 5 ---------- */
+
+.section-5 {
+  margin-top: 150px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.section-5-content-left {
+  width: 100%;
+  max-width: 539.06px;
+  height: 435px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+  background-image: linear-gradient(110deg, #25038B 0%, #040129 100%);
+  text-transform: uppercase;
+  color: var(--color-white);
+  font-family: var(--font-3);
+  font-size: 30px;
+  font-weight: bold;
+  line-height: 1.3em;
+}
+
+.section-5-content-left-text {
+  width: 100%;
+  max-width: 379.06px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.section-5-content-right {
+  width: 100%;
+  max-width: 806.92px;
+  margin: 0 0 0 3px;
+}
+
+.section-5-content-right-img {
+  width: 100%;
+  max-width: 806px;
+  height: 435px;
+  background-size: cover;
+}
+
+@media (max-width: 1347px) {
+  .section-5 {
+    flex-direction: column-reverse;
+  }
+
+  .section-5-content-left {
+    max-width: 100%;
+  }
+
+  .section-5-content-right {
+    max-width: 100%;
+  }
+
+  .section-5-content-right-img {
+    max-width: 100%;
+  }
+}
+
+@media (max-width: 1024px) {
+  .section-5-content-left {
+    height: 120px;
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 766px) {
+  .section-5-content-left-text {
+    max-width: 100%;
+  }
+
+  .section-5-content-right-img {
+    height: 250px;
+  }
+}
+
+/*---------------------------------------------------------------------------------------------*/
+/*---------------------------------------------------------------------------------------------*/
