--- a/index.css
+++ b/index.css
@@ -12,6 +12,7 @@
   --color-gray-light: #69727d;
   --color-gray-1: #43403e;
   --color-gray-2: #43403ed9;
+  --color-gray-3: #7a7a7a;
   --color-primary-1: #2c446c;
   --color-primary-2: #2f5aae;
   --color-blue-light: #0499db;
@@ -32,6 +33,7 @@ nav {
   position: fixed !important;
   width: 100% !important;
   padding: 0 10%;
+  background-color: var(--color-black-2) !important;
 }
 
 .nav-logo {
@@ -467,7 +469,7 @@ li .nav-item {
   justify-content: center;
   align-items: center;
   background-color: transparent;
-  background-image: linear-gradient(110deg, #25038B 0%, #040129 100%);
+  background-image: linear-gradient(110deg, #25038b 0%, #040129 100%);
   text-transform: uppercase;
   color: var(--color-white);
   font-family: var(--font-3);
@@ -509,6 +511,7 @@ li .nav-item {
 
   .section-5-content-right {
     max-width: 100%;
+    margin: 0 0 0 0;
   }
 
   .section-5-content-right-img {
@@ -530,6 +533,106 @@ li .nav-item {
 
   .section-5-content-right-img {
     height: 250px;
+  }
+}
+
+/* ---------- SECTION 6 ---------- */
+
+.section-6 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 100px 25px;
+}
+
+@media (max-width: 766px) {
+  .section-6 {
+    margin: 50px 25px;
+  }
+}
+
+/* ---------- FOOTER ---------- */
+
+footer {
+  width: 100%;
+  background-color: var(--color-black-2) !important;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 10px;
+}
+
+.footer-address,
+.footer-contact,
+.footer-schedule,
+.footer-social-networks,
+.footer-logo-date {
+  width: 100%;
+  max-width: 270px;
+  /*height: 238px;*/
+  height: 210px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin: 10px 10px;
+}
+
+.footer-title {
+  font-size: 18px;
+  font-family: var(--font-2);
+  text-transform: uppercase;
+  color: var(--color-blue-light);
+}
+
+.footer-container {
+  display: flex;
+}
+
+.footer-content {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer-subcontent {
+  display: flex;
+  align-items: center;
+}
+
+.iconify{
+  color: var(--color-blue-light);
+  margin: 0 8px;
+}
+
+.footer-text {
+  color: var(--color-gray-3);
+  font-family: var(--font-2);
+  font-size: 18px;
+}
+
+.footer-subcontent-social {
+  display: flex;
+  align-items: center;
+}
+
+.iconify-facebook,
+.iconify-twitter {
+  width: 50px;
+  height: 50px;
+  color: var(--color-blue-light);
+  margin: 0 10px;
+  cursor: pointer;
+}
+
+.footer-logo {
+  width: 100px;
+  height: 100px;
+  margin: 10px 0;
+}
+
+@media (max-width: 766px) {
+  footer {
+    flex-wrap: wrap;
   }
 }
 
