--- a/css/nosotros.css
+++ b/css/nosotros.css
@@ -12,7 +12,7 @@
 
 body {
   width: 100% !important;
-  background-color: var(--color-bg) !important;
+  background-color: var(--color-white) !important;
 }
 
 /* ---------- NAVBAR ---------- */
@@ -68,68 +68,3 @@ li .nav-item {
 }
 
 /* ---------- ---------- */
-
-.vision-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.vision {
-  margin-top: 100px;
-}
-
-.vision,
-.mision,
-.objetivos {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 100px 171px;
-}
-
-.content-title {
-  color: var(--color-white);
-  font-family: var(--font-1);
-  font-size: 45px;
-  font-weight: 600;
-  text-align: center;
-}
-
-.content-description {
-  color: var(--color-white);
-  font-family: var(--font-2);
-  font-size: 24px;
-  font-weight: 300;
-  line-height: 2em;
-  text-align: center;
-  padding: 0 15% 0 15%;
-}
-
-.content-description ul li {
-  display: list-item;
-  text-align: start;
-  margin-bottom: 30px;
-}
-
-@media (max-width: 900px) {
-  .vision,
-  .mision,
-  .objetivos {
-    padding: 50px 20px;
-  }
-
-  .content-description {
-    padding: 0;
-  }
-}
-
-@media (max-width: 456px) {
-  .vision,
-  .mision,
-  .objetivos {
-    border-bottom: 1px solid var(--color-gray-3);
-  }
-}
