footer social links fixed

--- a/css/index.css
+++ b/css/index.css
@@ -33,6 +33,7 @@ body {
 
 nav {
   position: fixed !important;
+  top: 0 !important;
   width: 100% !important;
   padding: 0 10%;
   background-color: var(--color-black-2) !important;
@@ -342,8 +343,6 @@ li .nav-item {
   width: 100%;
   max-width: 1140px;
   margin: auto;
-  /*position: relative;*/
-  /*z-index: -1;*/
 }
 
 .section-4-parallax {
@@ -413,6 +412,8 @@ li .nav-item {
   border-color: var(--color-dark-blue);
   border-radius: 0px 0px 0px 0px;
   padding: 15px 40px 15px 40px;
+  text-decoration: none;
+  display: inline-block;
   cursor: pointer;
   transition: 0.4s ease;
 }
@@ -640,6 +641,10 @@ footer {
   transform: scale(1.1);
 }
 
+.footer-subcontent-social-link {
+  text-decoration: none;
+}
+
 .footer-logo {
   width: 100px;
   height: 100px;
@@ -652,5 +657,4 @@ footer {
   }
 }
 
-/*---------------------------------------------------------------------------------------------*/
-/*---------------------------------------------------------------------------------------------*/
+
